# RstArticles

./: .gitignore  README.md  example_notebook.ipynb  pyproject.toml
rst_articles/: defaults.py
rst_articles/_ext/: definitions.py  first_cite.py  floating_figure.py  new_page.py
rst_articles/linter/: __init__.py  linter.py
rst_articles/linter/extractor/: rst.py
rst_articles/notebook/: __init__.py  article.py
rst_articles/templates/: bibliography.rst  conf.py  definition_list.rst  index.rst  preamble.tex  title.tex
