[project]
name = "rst_articles"
version = "0.1.0"
description = "A tool for generating PDFs documents from reStructuredText (rST) files using Sphinx and LaTeX as intermediate format."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pdf2image>=1.17.0",
    "sphinx>=9.1.0",
    "sphinxcontrib-bibtex>=2.6.5",
    "wikipedia>=1.4.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/saisua/RstArticles"

[project.optional-dependencies]
linter = [
    "doc8>=2.0.0",
    "language-tool-python>=3.2.2",
]
notebook = [
    "ipython>=9.10.0",
    "pdf2image>=1.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
]

[tool.setuptools.packages.find]
include = ["rst_articles*"]
exclude = ["source*", "build*"]

[tool.setuptools.package-data]
"rst_articles.templates" = ["*.rst", "*.tex", "*.bib"]
"rst_articles._ext" = ["*.rst", "*.tex", "*.bib"]